@@ -1,13 +1,0 @@
-target(
-  dependencies=[
-    'util/util-events/src/main/scala',
-    'util/util-events/src/main/java'
-  ]
-)
-
-target(name='tests',
-  dependencies=[
-    'util/util-events/src/test/scala',
-    'util/util-events/src/test/java'
-  ]
-)
