@@ -1,11 +1,0 @@
-package com.twitter.util.events;
-
-/**
- * Java friendly API for {@link com.twitter.util.events.Sink}.
- */
-@Deprecated
-public final class Sinks {
-  private Sinks() { }
-
-  public static final Sink DEFAULT_SINK = Sink$.MODULE$.getDefault();
-}
