@@ -1,14 +1,0 @@
-scala_library(
-  provides = scala_artifact(
-    org = 'com.twitter',
-    name = 'util-events',
-    repo = artifactory,
-  ),
-  dependencies=[
-    'util/util-app/src/main/scala',
-    'util/util-core/src/main/scala:scala',
-  ],
-  fatal_warnings=True,
-  sources=rglobs('*.scala'),
-  strict_deps=True,
-)
