@@ -1,9 +1,0 @@
-junit_tests(
-  dependencies=[
-    '3rdparty/jvm/junit',
-    'util/util-events/src/main/scala',
-    'util/util-events/src/main/java'
-  ],
-  fatal_warnings=True,
-  sources=rglobs('*.java')
-)
