@@ -1,11 +1,0 @@
-junit_tests(
-  dependencies=[
-    '3rdparty/jvm/junit',
-    '3rdparty/jvm/org/scalatest',
-    'util/util-events/src/main/scala',
-    'util/util-app/src/main/scala:scala',
-    'util/util-core/src/main/scala:scala',
-  ],
-  fatal_warnings=True,
-  sources=rglobs('*.scala')
-)
