@@ -2,9 +2,13 @@
 (http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
 The changelog style is adapted from Apache Lucene.
 
-Note that ``RB_ID=#`` correspond to associated messages in commits.
+Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in commits.
 
 Next Version
+
+API Changes:
+
+  * util-events: Module has been removed. ``PHAB_ID=D82346``
 
 7.0.0  2017-08-15
 
